renamed projects to experiences

--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -13,7 +13,7 @@
 - id: languages
   translation: Languages
 - id: projects
-  translation: Projects
+  translation: Experiences
 - id: skills
   translation: Traits
 - id: it-skills
