--- a/i18n/fr.yaml
+++ b/i18n/fr.yaml
@@ -13,7 +13,7 @@
 - id: languages
   translation: Langues
 - id: projects
-  translation: Projets
+  translation: Expériences
 - id: skills
   translation: Charactère
 - id: it-skills
